# GnomePhoneCompanionLinux

./: Cargo.toml  build.rs
resources/: contacts_container.ui  main_window.cmb  main_window.ui  resources.gresource.xml
src/: main.rs
src/ui/: contacts_container.rs  main_window.rs  mod.rs
src/ui/main_window/: imp.rs  mod.rs
