[package]
name = "gnome-phone-companion"
version = "0.1.0"
edition = "2021"
authors = ["bill <billpayne4x4@gmail.com>"]
description = "A GNOME application for managing your phone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
adw = { version = "0.1.1", package = "libadwaita"}
#derive-new = "0.5.9"

[build-dependencies]
gio = "0.15.12"

